[package]
name = "wsclient"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tracing = "0.1.37"
url = { version = "2.3" }
tokio-tungstenite = { version = "0.18.0" }
futures-channel = { version = "0.3" }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
tokio = { version = "1.26.0", default-features = false, features = [
    "io-std",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }

[[bin]]
name = "wsclient"
path = "src/bin/wsclient.rs"
